--- a/.github/workflows/test-codegen.yml
+++ b/.github/workflows/test-codegen.yml
@@ -6,7 +6,10 @@ defaults:
   run:
     working-directory: ./packages/rtk-query-codegen-openapi
 
-on: [push, pull_request]
+on:
+  push: {}
+  pull_request: {}
+  workflow_dispatch: {}
 
 jobs:
   changes:
